test/compile_errors/err_c_import_str_to_mut_char_requires_raw_contract.w
//! expect-error: raw c_import function call requires unsafe context

use c_import("void takes_mut(char *s);\n")

fn main:
    takes_mut("hello")
